--- a/gb/13/4/25/n3854891.md
+++ b/gb/13/4/25/n3854891.md
@@ -1,13 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/bfgrhg3918/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/bfgrhg3918/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/bfgrhg3918/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/bfgrhg3918/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/bfgrhg3918/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/bfgrhg3918/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/bfgrhg3918/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/bfgrhg3918/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/bfgrhg3918/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/bfgrhg3918/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/bfgrhg3918/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/bfgrhg3918/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/bfgrhg3918/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>向生命的勇士致敬</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2013/04/120118212916100445-600x400.jpg" />
-<h6>（Fotolia） 
-</h6>
+
+<h6></h6>
 <hr>
 <p>人生没有十全十美的，只要我们不轻视自己，肯用乐观善解的心，积极进取正面看待问题，条道路通罗马，路是无限的宽广。逆来顺受，放宽心，永不退缩，永不放弃，“山不转，路转；路不转，人转”，改变心态，换个角度思维，调整步伐，跌倒了就再爬起来，勇敢飞翔，走出阴霾，逆境不久。</p>
-<p>且看好多好多生命的<ahref="https://github.com/bfgrhg3918/djy/blob/master/gb/tag/%E5%8B%87%E5%A3%AB.md#1">勇士</a>们是如何的热爱生命，如何的撑起一片天，如何的活出生命的光彩，展现自我，创造幸福的生命。他（她）们散播欢乐愉悦的希望种子，把生命的光辉彻底发挥的淋漓尽致，乐观、知足、无私无所求地分享自己的勇敢，去鼓励别人。</p>
+<p>且看好多好多生命的<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%8B%87%E5%A3%AB.md#1">勇士</a>们是如何的热爱生命，如何的撑起一片天，如何的活出生命的光彩，展现自我，创造幸福的生命。他（她）们散播欢乐愉悦的希望种子，把生命的光辉彻底发挥的淋漓尽致，乐观、知足、无私无所求地分享自己的勇敢，去鼓励别人。</p>
 <p><b>美国海伦凯勒（Helen Keller）</b> ，伟大、传奇的教育家，她树立了“残而不废”的楷模，纽约前锋论坛报曾尊崇她为美国二十世纪四大伟人之一。海伦出生于公元1880年6月27日，在十九个月大的时候，因为生病而失去视力、听力，还丧失说话的能力，就此变成“又聋、又盲、又哑”的重度残障儿。海伦的父母希望海伦能受到良好的教育而求助于柏金斯盲人机构，6岁时才有此因缘认识改变她一生的家教恩师苏利文，启蒙她心灵之门。苏利文老师具有先天的弱视，几乎全盲，曾动过九次手术才重现光明。苏利文老师以坚毅的爱心、智慧及信念，给了海伦崭新的生命，从此引领海伦的人生方向。海伦一生中还有一位关键性的老师，就是开启她智慧心眼的斯维敦堡老师。</p>
 <p>1904年，海伦以优等成绩毕业于哈佛大学Radcliffe女子学院，成为第一位毕业于高等院校的视听障者。海伦说：“没有极高的目标，哪来极大的成就。”她将一生献给了盲人福利和教育事业，极力在世界各地争取兴建盲人学校，为促进盲人治疗计划而奔走。她不仅在全美巡回演讲，并曾访问35个国家，她正面积极的人生观、不畏艰难的坚强意志，她的爱心感动了全世界。</p>
 <p>海伦享年87岁，她璀璨的一生是无人可以取代的，成为后世永恒的典范。</p>
@@ -33,48 +32,46 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/12/5/26/n3597739.md#1">【李晓阳】：中国版“斯巴达300勇士”</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/12/9/4/n3674452.md#1">组图：香港绝食十勇士 生命抗冷漠政权</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/12/9/4/n3674553.md#1">中国过渡政府：“保钓十四勇士”揭示无人权就无主权</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/12/9/22/n3689015.md#1">双脚万能的老师 颠覆生命的模式</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/12/11/11/n3727366.md#1">千里挑战  癌友：天也感动哭了</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/12/12/27/n3762372.md#1">刘逸明：大学生李孟阳普法何罪之有？</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/13/3/3/n3813640.md#1">佛家故事：百位勇士的妈妈</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/13/4/5/n3839812.md#1">攀高峰勇士李小石 挑战世界第四高洛子峰</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/13/4/22/n3853062.md#1">睡神明桌下7年 贫童存3筒铜板助人</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/10/n12539164.md#1">浮生行吟：季节的容颜</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/12/5/26/n3597739.md#1">【李晓阳】：中国版“斯巴达300勇士”</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/12/9/4/n3674452.md#1">组图：香港绝食十勇士 生命抗冷漠政权</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/12/9/4/n3674553.md#1">中国过渡政府：“保钓十四勇士”揭示无人权就无主权</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/12/9/22/n3689015.md#1">双脚万能的老师 颠覆生命的模式</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/12/11/11/n3727366.md#1">千里挑战  癌友：天也感动哭了</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/12/12/27/n3762372.md#1">刘逸明：大学生李孟阳普法何罪之有？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/3/3/n3813640.md#1">佛家故事：百位勇士的妈妈</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/4/5/n3839812.md#1">攀高峰勇士李小石 挑战世界第四高洛子峰</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/4/22/n3853062.md#1">睡神明桌下7年 贫童存3筒铜板助人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13752643.md#1">浮生行吟：在黑暗中交会</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/11/n10903516.md#1" target="_blank">观雨堂主：一位历史学家在生命终点的“争宠”</a></li><li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/10/n11246440.md#1" target="_blank">中国维权律师彭永峰修炼法轮功 见证神奇</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/20/n10234497.md#1" target="_blank">林辉：财大气粗的共产国际背后是血腥掠夺</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/14/n11258498.md#1" target="_blank">二十年电子游戏狂 因修炼脱胎换骨</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/15/n12550540.md#1">因预言中共病毒爆红 印度男孩预示来年天象</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/6/n12529751.md#1">中枪转生协警缉凶  双胎记男孩会前世妻儿</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/13/n12546586.md#1">紫微斗数推算  小谈拜登真能登大位吗？</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/9/13/n12399763.md#1">既是“于青菜”又是“于青天”——清朝廉吏于成龙</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/10/31/n12514973.md#1">别装熟！想广结善缘 但这行为真的很讨人厌</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/17/n12556673.md#1">【薇羽看世间】川普早已布局撒网</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/18/n12557446.md#1">【十字路口】中共介入大选 美国新独立战争？</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/18/n12557501.md#1">【西岸观察】美国大选舞弊中的委内瑞拉因素</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/16/n12552183.md#1">【翻墙必看】拜登又一大丑闻曝光 涉奥巴马</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/17/n12554108.md#1">计算“邮寄选票”后反超   纽约众议员布朗斯汀宣布胜选</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/16/n12553767.md#1">被央视污言秽语狂骂 蓬佩奥：继续制裁</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/16/n12554448.md#1">“八路军”住别墅抹发胶 中共抗日剧太雷人</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/17/n12554623.md#1">陪孙俪选窗帘意见遭否定 邓超反问获网友趣答</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/15/n12551581.md#1">迪士尼CEO承认 《花木兰》因争议影响票房</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/16/n12553064.md#1">英男声称被外星人绑架 在太空船上遇到歌星</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/15/n12551768.md#1">赵树海70岁生日出专辑 不禁直呼想念小孙女</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/16/n12553368.md#1">台研发全球首株抗体 可直接杀死癌细胞</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/13/n12547278.md#1">还在到处发名片？不要让自己成为人脉怪兽</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/17/n12555428.md#1">甘肃男子带“老虎”逛街 路人回头率100%</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/16/n12552492.md#1">在教堂住12年 英国流浪猫过世获纪念仪式</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/16/n12553064.md#1">英男声称被外星人绑架 在太空船上遇到歌星</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752388.md#1">【财商天下】美欧看上 台湾会脱孤？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752277.md#1">【马克时空】预警机、侦察机扮奇兵 助乌军精准打击俄军</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752436.md#1">李克强十万人大会事先获得习近平默许？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752419.md#1">专家：中共核检是干柴烈火 随时引爆疫情</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13752937.md#1">林志玲47岁高龄当妈 写给儿子的话令人动容</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13752955.md#1">金马影帝万梓良现身小商演 身体欠安需2人搀扶</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752111.md#1">避免旅行时多花冤枉钱 专家教你几招</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752361.md#1">减肥新进展 香港浸大研究发现减少饮食方法</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/bfgrhg3918/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/bfgrhg3918/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/13/4/25/n3854891.htm">向生命的勇士致敬</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/13/4/25/n3854891.htm">向生命的勇士致敬</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/bfgrhg3918/djy/blob/master/gb/13/4/25/n3854891.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/bfgrhg3918/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/bfgrhg3918/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/13/4/25/n3854891.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
